--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.4.6",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.1.0",
+    "text-mask-addons": "^3.8.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
